--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: readCzi
 Type: Package
 Title: Read czi image files, convert them to tifs, and save metadata
-Version: 0.1.4
+Version: 0.1.5
 Author: c(person("Kai", "Budde", email = "kai.budde@uni-rostock.de",
     role = c("aut", "cre"))
 Maintainer: Kai Budde <kai.budde@uni-rostock.de>
@@ -11,5 +11,5 @@ Description: This package may read (z-stack) czi image data, edit them,
 License: LICENSE
 Encoding: UTF-8
 LazyData: true
-Imports: BiocManager, reticulate, EBImage
+Imports: BiocManager, reticulate, EBImage, xml2
 RoxygenNote: 7.1.1
