add possibility to interpret image data with fewer tracks than channels and some bug fixes

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 # Custom files/directories
 readCzi.Rproj
-/examples/*metadata.txt
-/examples/output
-/examples/output_compare
+examplesForTesting/
 
 # History files
 .Rhistory
