--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,17 @@
-Package: readCzi
 Type: Package
+Package: readCzi
 Title: Read CZI image files, convert them to tifs, and save metadata
-Version: 0.3.0
-Authors@R: person("Kai", "Budde-Sagert", email = "kai.budde-sagert@uni-rostock.de",
-    role = c("aut", "cre"), comment = c(ORCID = "0000-0001-6836-9865"))
+Version: 0.4.0
+Authors@R: 
+    person("Kai", "Budde-Sagert", , "kai.budde-sagert@uni-rostock.de", role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0001-6836-9865"))
 Maintainer: Kai Budde-Sagert <kai.budde-sagert@uni-rostock.de>
 Description: The package reads (z-stack) CZI microscopy files, edits them,
     and stores the results in the tif format. The metadata is also read,
     transformed into a tibble, and saved as a CSV file.
+License: GPL (>= 3)
 URL: https://github.com/SFB-ELAINE/readCzi
 BugReports: https://github.com/SFB-ELAINE/readCzi/issues
-License: GPL (>= 3)
 Depends: 
     R (>= 4.0.0)
 Imports:
@@ -19,6 +20,9 @@ Imports:
     reticulate (>= 1.26),
     tibble (>= 3.1.8),
     xml2 (>= 1.3.3)
+Remotes:
+    bioc::EBImage
+ByteCompile: TRUE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
