--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Type: Package
 Package: readCzi
-Title: Read CZI image files, convert them to tifs, and save metadata
-Version: 0.4.0
+Title: {readCzi}: R package to read CZI image files, convert them to tifs, and save metadata
+Version: 0.4.1
 Authors@R: 
     person("Kai", "Budde-Sagert", , "kai.budde-sagert@uni-rostock.de", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0001-6836-9865"))
