--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Type: Package
 Package: readCzi
-Title: {readCzi}: R package to read CZI image files, convert them to tifs, and save metadata
+Title: Read CZI image files, convert them to tifs, and save metadata
 Version: 0.4.1
 Authors@R: 
     person("Kai", "Budde-Sagert", , "kai.budde-sagert@uni-rostock.de", role = c("aut", "cre"),
